# experimentStash

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  PITFALLS.md  README.md  WORKFLOW.md  expstash.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
configs/: analysis_experiment.yaml  baseline_experiment.yaml  example_experiment.yaml  hello_world.yaml  hyperparameter_sweep.yaml  meta.yaml  runs.yaml  test_integration.yaml
configs/figure1_method_comparison/: pca_swissroll.yaml
configs/manylatents/experiment/: searchpath_test.yaml  single_algorithm.yaml
notebooks/: .gitkeep
outputs/: .gitkeep
scripts/: README.md  __init__.py  add_tool  add_tool.py  cleanup_wandb.py  remove_tool.py  run_experiment  setup_tool.py  snapshot_experiment  validate_configs.py  validate_setup.py
tests/: __init__.py  test_add_tool.py  test_remove_tool.py  test_setup.py  test_template_integrity.py  test_validation.py  test_workflow.py
tools/: .gitkeep
tools/hello-world/: README.md  pyproject.toml
tools/hello-world/src/: __init__.py  main.py
tools/hydra-test-tool/: pyproject.toml
tools/hydra-test-tool/src/: main.py
